# radio_sdr_app

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_CONFIG.md  README.md  ROADMAP.md  TROUBLESHOOTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
cpp/: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle  wget-log
cpp/app/: build.gradle  proguard-rules.pro
cpp/app/src/main/: AndroidManifest.xml
cpp/app/src/main/cpp/: CMakeLists.txt  audio_manager.cpp  sdr_manager.cpp  sdr_radio.cpp  usb_manager.cpp
cpp/app/src/main/cpp/audio/: CMakeLists.txt  audio_processor.cpp
cpp/app/src/main/cpp/include/: audio_manager.h  sdr_manager.h  sdr_radio.h  usb_manager.h
cpp/app/src/main/cpp/rtlsdr/: CMakeLists.txt  rtlsdr_simulated.cpp
cpp/app/src/main/java/com/example/sdrradio/: MainActivity.java  SDRRadio.java
cpp/app/src/main/res/drawable/: ic_launcher_foreground.xml
cpp/app/src/main/res/layout/: activity_main.xml
cpp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cpp/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  device_filter.xml
java/: .gitignore  README.md  build.gradle  build.sh  build_manual.md  gradle.properties  settings.gradle  wget-log
java/app/: build.gradle  proguard-rules.pro
java/app/src/main/: AndroidManifest.xml
java/app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  demodulator.cpp  demodulator.h  radiosdr_jni.cpp  sdr_controller.cpp  sdr_controller.h  signal_processor.cpp  signal_processor.h  spectrum_analyzer.cpp  spectrum_analyzer.h
java/app/src/main/cpp/librtlsdr/: CMakeLists.txt
java/app/src/main/cpp/librtlsdr/include/: rtl-sdr.h
java/app/src/main/cpp/librtlsdr/src/: convenience.c  rtl-sdr.c  tuner_r82xx.c
java/app/src/main/java/com/radioSDR/app/: MainActivity.java  SettingsActivity.java  SpectrumActivity.java
java/app/src/main/res/drawable/: ic_radio.xml
java/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_spectrum.xml
java/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
java/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
java/app/src/main/res/xml/: device_filter.xml
java_2/: .gitignore  MANUAL_COMPLETO.md  README.md  build.gradle  capture_detailed_logs.sh  capture_logs.sh  check_permissions.sh  gradle.properties  grant_permissions.sh  install.sh  project.properties  sdr_detailed_logs.txt  settings.gradle
java_2/app/: build.gradle  proguard-rules.pro
java_2/app/src/main/: AndroidManifest.xml
java_2/app/src/main/java/com/sdrradio/app/: MainActivity.java
java_2/app/src/main/java/com/sdrradio/app/receiver/: USBReceiver.java
java_2/app/src/main/java/com/sdrradio/app/service/: SDRService.java
java_2/app/src/main/java/com/sdrradio/app/utils/: AudioProcessor.java  RTLSDROperations.java  SpectrumAnalyzer.java
java_2/app/src/main/res/layout/: activity_main.xml
java_2/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
java_2/app/src/main/res/xml/: device_filter.xml
kotlin/: .gitignore  MANUAL_APP_ANDROID_KT_USING_DRIVE.md  MANUAL_BUILD_GRADLE.md  MANUAL_COMPLETO.md  MANUAL_RTL_SDR_CPP.md  PROJETO_COMPLETO.md  README.md  RESUMO_AUDIO.md  build.gradle  download_rtlsdr.sh  gradle.properties  install.sh  settings.gradle
kotlin/app/: build.gradle
kotlin/app/src/main/: AndroidManifest.xml
kotlin/app/src/main/cpp/: CMakeLists.txt  sdr_radio.cpp  sdr_radio.h  sdr_radio_simple.cpp
kotlin/app/src/main/java/com/sdrradio/kt/: MainActivity.kt  SDRRadio.kt
kotlin/app/src/main/res/drawable/: ic_launcher_foreground.xml
kotlin/app/src/main/res/layout/: activity_main.xml
kotlin/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml
kotlin/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
kotlin/app/src/main/res/xml/: device_filter.xml  file_paths.xml
react_native/: App.tsx  EXPO_MIGRATION.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
react_native/android/: build.gradle  gradle.properties  settings.gradle
react_native/android/app/: build.gradle
react_native/android/app/src/main/: AndroidManifest.xml
react_native/android/app/src/main/java/com/radiosdr/: MainActivity.kt  MainApplication.kt
react_native/android/app/src/main/res/values/: strings.xml
react_native/android/app/src/main/res/xml/: device_filter.xml
react_native/assets/: README.md
react_native/ios/: Podfile
react_native/ios/RadioSDR/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
react_native/ios/RadioSDR.xcodeproj/: project.pbxproj
react_native/ios/RadioSDR.xcodeproj/xcshareddata/xcschemes/: RadioSDR.xcscheme
react_native/src/native/: RTLSDRNative.ts
react_native/src/screens/: MainScreen.tsx  SettingsScreen.tsx  SpectrumScreen.tsx
screenshots/: README.md
